# Cost-Intelligence

./: .env.example  .gitignore  .vercelignore  DASHBOARD_REALIGN_REPORT.md  DEV_RUN.md  PHASE_0_REPORT.md  PHASE_10_REPORT.md  PHASE_1_REPORT.md  PHASE_2_REPORT.md  PHASE_3_REPORT.md  PHASE_4_REPORT.md  PHASE_5_REPORT.md  PHASE_6_REPORT.md  PHASE_7_REPORT.md  PHASE_8_REPORT.md  PHASE_9_REPORT.md  README.md  REALIGNMENT_REPORT.md  REALIGN_PHASES_5-10.md  alembic.ini  dump.rdb  package.json  pnpm-lock.yaml  pyproject.toml  vercel.json
.github/workflows/: ci.yml
Designs/: Terzo-Cost-Intelligence-App-v2.html  Terzo-Cost-Intelligence-Dashboard.html
Docs/: 2026-06-21-cost-intelligence-platform.md  Cost Intelligence - Full Architecture.md  Deployment Guide.md  Improvements.md  PHASE_MANIFEST.md  Problem Statement and Blueprint.md  Security Guide.md  Summary.md
Prompt/: Prompt.md
apps/api/: Dockerfile  start.sh
apps/api/app/: __init__.py  main.py
apps/api/app/agents/: anomaly.py  commitment_control.py  data_steward.py  detection.py  enrichment.py  extraction.py  ingestion.py  (+5 more)
apps/api/scripts/: seed_demo.py
apps/api/tests/: conftest.py  test_advanced_unit.py  test_api.py  test_ci_nirvana_unit.py  test_commitment_unit.py  test_cost_intelligence_unit.py  test_data_contracts.py  test_detection_rules.py  test_ingestion_unit.py  test_line_item_unit.py  test_llm_connectivity.py  test_matching_unit.py  test_nirvana_unit.py  test_rbac.py  test_secrets.py  test_settings.py  test_workflow_unit.py
apps/web/: Dockerfile  middleware.ts  next.config.js  package-lock.json  package.json  tailwind.config.ts  vitest.config.mts
apps/web/app/: globals.css  layout.tsx  page.tsx
apps/web/components/: RequiresExternalData.tsx
apps/web/lib/: api.test.ts  api.ts  auth.ts  cn.ts  config.ts  design-tokens.ts  dev.ts  format.ts  modules.ts  providers.tsx  types.ts
evals/: README.md  run_evals.py
evals/detection/: eval_harness.py
evals/detection/golden/: synthetic_dataset.json
evals/load/: test_10m_rows.py
evals/matching/: eval_harness.py
evals/matching/golden/: golden_pairs.jsonl
infra/: docker-compose.yml  otel-collector.yaml
infra/terraform/: README.md
migrations/: env.py
migrations/versions/: 001_initial_schema.py  002_ingestion_schema.py  003_matching.py  004_detection.py  005_memory_layer.py  006_nirvana.py  007_advanced.py  008_line_item_depth.py  009_agentic_automation.py  010_control_layer.py  011_cost_intelligence.py
(+253 files in other folders)
